# pi-rpc-server

./: .env.example  .gitignore  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  README.md  RPC-MODEL-TEST.md  SUMMARY.md  package-lock.json  package.json  pyproject.toml  test-rpc-direct.js  test-rpc.js  tsconfig.json
.pi-lens/: turn-state.json
.pi-lens/cache/: javascript-rules-v1.json  jscpd.json  jscpd.meta.json  knip.meta.json  session-start-guidance.meta.json  todo-baseline.meta.json
scripts/: build.sh
src/: api.py  config.py  main.py  pi_agent.py  websocket_handler.py
static/: app.js  app.ts  index.html
